# openapi/spec/waterfall_v1.yaml
@@ -88,6 +88,8 @@ paths:
     $ref: ./paths/projects.yaml#/~1projects~1{projectId}~1plannings~1{planningId}~1tasks~1{taskUid}
   /projects/{projectId}/plannings/{planningId}/tasks/{taskUid}/links:
     $ref: ./paths/projects.yaml#/~1projects~1{projectId}~1plannings~1{planningId}~1tasks~1{taskUid}~1links
+  /projects/{projectId}/plannings/{planningId}/tasks/restore:
+    $ref: ./paths/projects.yaml#/~1projects~1{projectId}~1plannings~1{planningId}~1tasks~1restore
   /projects/{projectId}/plannings/{planningId}/validate:
     $ref: ./paths/projects.yaml#/~1projects~1{projectId}~1plannings~1{planningId}~1validate
   /projects/{projectId}/plannings/{planningId}/reference:
@@ -239,6 +241,12 @@ components:
       $ref: ./components/schemas/PlanningTaskCreate.yaml
     PlanningTaskDelete:
       $ref: ./components/schemas/PlanningTaskDelete.yaml
+    PlanningTaskSnapshotWrite:
+      $ref: ./components/schemas/PlanningTaskSnapshotWrite.yaml
+    PlanningLinkSnapshotWrite:
+      $ref: ./components/schemas/PlanningLinkSnapshotWrite.yaml
+    PlanningSnapshotRestore:
+      $ref: ./components/schemas/PlanningSnapshotRestore.yaml
     PlanningDetailRead:
       $ref: ./components/schemas/PlanningDetailRead.yaml
     TaskRead:
